--- a/index.html
+++ b/index.html
@@ -7,67 +7,49 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
-
     body {
       font-family: "Poppins", sans-serif;
       background: #0a0a0a;
       color: #eaeaea;
       line-height: 1.6;
-      overflow-x: hidden;
     }
 
+    /* Navbar */
+    nav {
+      background: #0f0f0f;
+      border-bottom: 1px solid #111;
+    }
+    nav a { color: #eee; transition: 0.3s; }
+    nav a:hover, nav a.active { color: #00f7ff; }
+
+    /* Hero */
     header {
-      background: linear-gradient(135deg, #0d0d0d, #141414, #1f1f1f);
-      color: #fff;
-      padding: 80px 20px;
+      padding: 100px 20px;
       text-align: center;
+      background: linear-gradient(135deg, #0d0d0d, #1f1f1f);
     }
-
     header h1 {
       font-size: 3rem;
-      animation: fadeInDown 1.2s ease-in-out;
+      font-weight: 700;
       background: linear-gradient(90deg, #00f7ff, #0af, #7b2ff7);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-
-    header p {
-      font-size: 1.2rem;
-      color: #aaa;
-      margin-top: 10px;
-    }
-
-    nav {
-      background: #0f0f0f;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      border-bottom: 2px solid #111;
-    }
-
-    nav a {
-      color: #eee;
-      padding: 15px 20px;
-      text-decoration: none;
+    header p { font-size: 1.2rem; color: #aaa; }
+    header .btn {
+      margin-top: 20px;
+      background: #00f7ff;
+      color: #000;
+      border-radius: 30px;
+      padding: 10px 25px;
       transition: 0.3s;
-      font-weight: 500;
     }
+    header .btn:hover { background: #0af; color: #fff; }
 
-    nav a:hover, nav a.active {
-      color: #00f7ff;
-    }
-
-    section {
-      padding: 70px 20px;
-      max-width: 1100px;
-      margin: auto;
-      width: 100%;
-    }
+    section { padding: 70px 20px; max-width: 1100px; margin: auto; }
 
     section h2 {
       text-align: center;
@@ -79,199 +61,62 @@
     }
 
     /* About */
-    #about {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      gap: 30px;
-      text-align: center;
-      width: 100%;
-      margin-bottom: -50px;
-    }
-
+    #about { display: flex; flex-wrap: wrap; gap: 30px; align-items: center; justify-content: center; }
     #about img {
-      max-width: 260px;
-      width: 50%;
-      border-radius: 15px;
+      max-width: 260px; border-radius: 15px; border: 3px solid #0af;
       box-shadow: 0 6px 20px rgba(0,0,0,0.6);
-      border: 3px solid #0af;
-      animation: fadeIn 1.5s ease-in-out;
     }
-
-    #about p {
-      flex: 1;
-      min-width: 280px;
-      font-size: 1.1rem;
-      color: #ccc;
-      animation: fadeInUp 1.5s ease-in-out;
-    }
+    #about p { flex: 1; min-width: 280px; color: #ccc; font-size: 1.1rem; }
 
     /* Skills */
-    .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 25px;
-      justify-items: center;
-      width: 100%;
-    }
-
+    .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 25px; }
     .skill-card {
-      background: linear-gradient(145deg, #111, #1b1b1b);
-      padding: 20px;
-      border-radius: 12px;
-      text-align: center;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.6);
-      transition: transform 0.3s, box-shadow 0.3s;
-      width: 100%;
-      max-width: 220px;
+      background: #111; padding: 25px; border-radius: 12px; text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5); transition: 0.3s;
     }
-
-    .skill-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 6px 20px rgba(0, 247, 255, 0.4);
-    }
-
-    .skill-icon {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-      background: linear-gradient(90deg, #0af, #00f7ff, #7b2ff7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .skill-card h3 {
-      margin: 10px 0;
-      font-size: 1.2rem;
-      color: #fff;
-    }
-
-    .skill-card p {
-      font-size: 0.9rem;
-      color: #aaa;
-    }
+    .skill-card:hover { transform: translateY(-6px); box-shadow: 0 6px 20px rgba(0, 247, 255, 0.4); }
+    .skill-icon { font-size: 2.5rem; margin-bottom: 10px; color: #00f7ff; }
+    .skill-card h3 { color: #fff; }
 
     /* Projects */
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 25px;
-      width: 100%;
-    }
-
+    .projects { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; }
     .project {
-      background: linear-gradient(145deg, #111, #1a1a1a);
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 3px 15px rgba(0,0,0,0.6);
-      transition: transform 0.3s, background 0.3s;
+      background: #111; padding: 20px; border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.6); transition: 0.3s;
     }
-
-    .project:hover {
-      transform: translateY(-8px);
-      background: linear-gradient(145deg, #141414, #222);
-    }
-
+    .project:hover { transform: translateY(-8px); background: #181818; }
     .project h3 {
-      margin-bottom: 10px;
       background: linear-gradient(90deg, #0af, #00f7ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
     }
-
     .project a {
-      color: #00f7ff;
-      text-decoration: none;
-      font-weight: bold;
+      display: inline-block; margin-top: 10px;
+      color: #00f7ff; font-weight: bold; text-decoration: none;
     }
-
-    .project a:hover {
-      text-decoration: underline;
-    }
+    .project a:hover { text-decoration: underline; }
 
     /* Footer */
     footer {
-      background: linear-gradient(135deg, #0d0d0d, #141414, #1f1f1f);
-      color: #999;
-      text-align: center;
-      padding: 50px 20px;
-      margin-top: 50px;
-      width: 100%;
+      background: #0d0d0d; padding: 50px 20px; text-align: center; margin-top: 50px;
     }
-
-    footer h2 {
-      margin-bottom: 25px;
+    footer h2 { margin-bottom: 20px; }
+    .socials a {
+      color: #00f7ff; margin: 0 10px; font-size: 1.5rem; transition: 0.3s;
     }
-
-    .contact-info {
-      text-align: left;
-      font-size: 1rem;
-      margin-bottom: 20px;
-      width: 100%;
-      margin-left: 50px;
-    }
-
-    .contact-info p {
-      margin: 10px 0;
-    }
-
-    .contact-info a {
-      color: #0af;
-      text-decoration: none;
-    }
-
-    .contact-info a:hover {
-      text-decoration: underline;
-    }
-
-    footer p.copy {
-      font-size: 0.85rem;
-      color: #bbb5b5;
-      margin-top: -55px;
-    }
-
-    /* Animations */
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    @keyframes fadeInDown { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
-    @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+    .socials a:hover { color: #fff; }
+    footer p { margin-top: 20px; font-size: 0.85rem; color: #bbb; }
 
     /* Responsive */
     @media(max-width: 768px) {
       header h1 { font-size: 2.2rem; }
       #about { flex-direction: column; text-align: center; }
-      #about p { text-align: center; }
-      nav a { padding: 10px; font-size: 0.9rem; }
-      .contact-info {
-      text-align: left;
-      font-size: 1rem;
-      margin-bottom: 20px;
-      width: 100%;
-      margin-left: 10px;
-    }
-
-    .contact-info p {
-      margin: 10px 0;
-    }
-
-    .contact-info a {
-      color: #0af;
-      text-decoration: none;
-    }
-
-    .contact-info a:hover {
-      text-decoration: underline;
-    }
-
-    footer p.copy {
-      font-size: 0.85rem;
-      color: #bbb5b5;
-      margin-top: 20px;
-    }
     }
   </style>
 </head>
 <body>
-      <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Ajmal Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -288,37 +133,42 @@
     </div>
   </nav>
 
+  <!-- Hero -->
   <header>
     <h1>Ajmal Mubarak</h1>
     <p>Fresher Frontend Developer | HTML • CSS • JavaScript</p>
+    <a href="#contact" class="btn">Hire Me</a>
   </header>
 
+  <!-- About -->
   <section id="about">
     <img src="ajmal.jpg" alt="Ajmal Mubarak">
-    <p>Hello! I’m <b>Ajmal Mubarak</b>, a fresher frontend developer passionate about building responsive and user-friendly websites using <b>HTML, CSS, and JavaScript</b>. I love learning new technologies and improving my skills to create professional web experiences.</p>
+    <p>Hello! I’m <b>Ajmal Mubarak</b>, a fresher frontend developer passionate about building responsive and user-friendly websites. I love learning new technologies and improving my skills to create professional web experiences.</p>
   </section>
 
+  <!-- Skills -->
   <section id="skills">
     <h2>My Skills</h2>
     <div class="skills-grid">
       <div class="skill-card">
-        <div class="skill-icon">💻</div>
+        <div class="skill-icon"><i class="fa-brands fa-html5"></i></div>
         <h3>HTML</h3>
         <p>Building structured, semantic web pages.</p>
       </div>
       <div class="skill-card">
-        <div class="skill-icon">🎨</div>
+        <div class="skill-icon"><i class="fa-brands fa-css3-alt"></i></div>
         <h3>CSS</h3>
         <p>Designing responsive and modern layouts.</p>
       </div>
       <div class="skill-card">
-        <div class="skill-icon">⚡</div>
+        <div class="skill-icon"><i class="fa-brands fa-js"></i></div>
         <h3>JavaScript</h3>
         <p>Adding interactivity and dynamic features.</p>
       </div>
     </div>
   </section>
 
+  <!-- Projects -->
   <section id="projects">
     <h2>Projects</h2>
     <div class="projects">
@@ -334,34 +184,35 @@
       </div>
       <div class="project">
         <h3>Turf Booking Website</h3>
-        <p>A platform for book turf nearest you.</p>
+        <p>A platform to book turf near you.</p>
         <a href="https://mubaralajmal.github.io/turf1/" target="_blank">View Live</a>
       </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer id="contact">
-    <div class="contact-info">
-      <h2>Contact Me</h2>
-      <p>📱 WhatsApp: <a href="https://wa.me/919947893663" target="_blank">9947893663</a></p>
-      <p>📷 Instagram: <a href="https://instagram.com/_.ajmall.__" target="_blank">_.ajmall.__</a></p>
-      <p>📧 Email: <a href="mailto:mubaralajmal0@gmail.com">mubaralajmal0@gmail.com</a></p>
+    <h2>Contact Me</h2>
+    <p>📱 <a href="https://wa.me/919947893663" target="_blank">WhatsApp</a> | 
+       📧 <a href="mailto:mubaralajmal0@gmail.com">Email</a></p>
+    <div class="socials">
+      <a href="https://instagram.com/_.ajmall.__" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/mubaralajmal" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
-    <p class="copy">© 2025 Ajmal Mubarak | Portfolio | Built with using HTML, CSS, JS</p>
+    <p>© 2025 Ajmal Mubarak | Portfolio</p>
   </footer>
 
   <script>
     // Active nav highlight on scroll
     const sections = document.querySelectorAll("section, footer");
     const navLinks = document.querySelectorAll("nav a");
-
     window.addEventListener("scroll", () => {
       let current = "";
       sections.forEach(sec => {
         const secTop = sec.offsetTop - 100;
         if (scrollY >= secTop) current = sec.getAttribute("id");
       });
-
       navLinks.forEach(link => {
         link.classList.remove("active");
         if (link.getAttribute("href").includes(current)) {
@@ -372,4 +223,3 @@
   </script>
 </body>
 </html>
-
